[gd_scene load_steps=19 format=3 uid="uid://cwik24430m7o8"]

[ext_resource type="Script" path="res://addons/cider_wiki/wiki_tab.gd" id="1_0r4nw"]
[ext_resource type="Theme" uid="uid://vn685as2raec" path="res://addons/cider_wiki/cider_theme.tres" id="1_rghra"]
[ext_resource type="Script" path="res://addons/cider_wiki/create_page_dialog.gd" id="3_fyxo2"]
[ext_resource type="Texture2D" uid="uid://b7opasi2xc66j" path="res://addons/cider_wiki/icons/icon_create.svg" id="3_j2pir"]
[ext_resource type="Texture2D" uid="uid://d3weiu1ixrltf" path="res://addons/cider_wiki/icons/icon_create_sub.svg" id="4_hbril"]
[ext_resource type="Script" path="res://addons/cider_wiki/delete_page_dialog.gd" id="4_ifmwh"]
[ext_resource type="Script" path="res://addons/cider_wiki/file_tree.gd" id="5_qv0ui"]
[ext_resource type="Texture2D" uid="uid://cu128yd18oopc" path="res://addons/cider_wiki/icons/icon_edit.svg" id="5_vff41"]
[ext_resource type="Script" path="res://addons/cider_wiki/search.gd" id="6_2qqxh"]
[ext_resource type="Script" path="res://addons/cider_wiki/code_edit.gd" id="6_6krtk"]
[ext_resource type="Script" path="res://addons/cider_wiki/document_rich_text_label.gd" id="7_l8en4"]
[ext_resource type="Texture2D" uid="uid://0emc4p7m7kmc" path="res://addons/cider_wiki/icons/icon_save.svg" id="8_njsno"]
[ext_resource type="Texture2D" uid="uid://ce1rsxmc5h5mq" path="res://addons/cider_wiki/icons/icon_cancel.svg" id="9_mhjoc"]
[ext_resource type="Texture2D" uid="uid://deqrmlvsuqmm3" path="res://addons/cider_wiki/icons/icon_help.svg" id="10_dtosf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k6ri5"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.365, 0.365, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_detail = 1

[sub_resource type="InputEventKey" id="InputEventKey_xj4q1"]
device = -1
ctrl_pressed = true
keycode = 83

[sub_resource type="Shortcut" id="Shortcut_mjlnd"]
events = [SubResource("InputEventKey_xj4q1")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nmdn1"]
bg_color = Color(0.6, 0.6, 0.6, 0)
shadow_size = 8
shadow_offset = Vector2(4, 4)

[node name="WikiTab" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_rghra")
script = ExtResource("1_0r4nw")

[node name="Splitter" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 150

[node name="FileTreeContainer" type="VBoxContainer" parent="Splitter"]
layout_mode = 2

[node name="CreatePageButton" type="Button" parent="Splitter/FileTreeContainer"]
layout_mode = 2
tooltip_text = "Create a new page as a sibling to the current page."
text = "Create Page"
icon = ExtResource("3_j2pir")

[node name="CreateChildPageButton" type="Button" parent="Splitter/FileTreeContainer"]
layout_mode = 2
tooltip_text = "Create a new page as a child of the current page."
text = "Create SubPage"
icon = ExtResource("4_hbril")

[node name="FileTree" type="Tree" parent="Splitter/FileTreeContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
auto_translate = false
allow_rmb_select = true
hide_root = true
script = ExtResource("5_qv0ui")

[node name="PopupMenu" type="PopupMenu" parent="Splitter/FileTreeContainer/FileTree"]
item_count = 2
item_0/text = "Rename"
item_0/id = 0
item_1/text = "Delete"
item_1/id = 1

[node name="DocumentContainer" type="VBoxContainer" parent="Splitter"]
layout_mode = 2

[node name="Search" type="PanelContainer" parent="Splitter/DocumentContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("6_2qqxh")

[node name="SearchBar" type="HBoxContainer" parent="Splitter/DocumentContainer/Search"]
layout_mode = 2

[node name="SearchLineEdit" type="LineEdit" parent="Splitter/DocumentContainer/Search/SearchBar"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search"
clear_button_enabled = true

[node name="RegexFlagButton" type="Button" parent="Splitter/DocumentContainer/Search/SearchBar"]
layout_mode = 2
tooltip_text = "Enables RegEx in the search bar."
toggle_mode = true
text = ".*"

[node name="SourceFlagButton" type="Button" parent="Splitter/DocumentContainer/Search/SearchBar"]
layout_mode = 2
tooltip_text = "Searches within the BBCode directly."
toggle_mode = true
text = "[/]"

[node name="SearchPopupPanel" type="PopupPanel" parent="Splitter/DocumentContainer/Search"]

[node name="ResultsContainer" type="VBoxContainer" parent="Splitter/DocumentContainer/Search/SearchPopupPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -416.0
offset_bottom = -416.0
grow_horizontal = 2
grow_vertical = 2

[node name="MessageContainer" type="CenterContainer" parent="Splitter/DocumentContainer/Search/SearchPopupPanel/ResultsContainer"]
layout_mode = 2

[node name="Message" type="Label" parent="Splitter/DocumentContainer/Search/SearchPopupPanel/ResultsContainer/MessageContainer"]
layout_mode = 2
text = "Searching..."

[node name="ResultsTree" type="Tree" parent="Splitter/DocumentContainer/Search/SearchPopupPanel/ResultsContainer"]
layout_mode = 2
size_flags_vertical = 3
hide_root = true

[node name="Document" type="MarginContainer" parent="Splitter/DocumentContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RenderedView" type="PanelContainer" parent="Splitter/DocumentContainer/Document"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="DocumentMarginContainer" type="MarginContainer" parent="Splitter/DocumentContainer/Document/RenderedView"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"DocumentMarginContainer"

[node name="DocumentRichTextLabel" type="RichTextLabel" parent="Splitter/DocumentContainer/Document/RenderedView/DocumentMarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
auto_translate = false
focus_mode = 2
bbcode_enabled = true
context_menu_enabled = true
selection_enabled = true
script = ExtResource("7_l8en4")

[node name="MetaLabelContainer" type="PanelContainer" parent="Splitter/DocumentContainer/Document/RenderedView/DocumentMarginContainer/DocumentRichTextLabel"]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 1.0
grow_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k6ri5")

[node name="MetaLabel" type="Label" parent="Splitter/DocumentContainer/Document/RenderedView/DocumentMarginContainer/DocumentRichTextLabel/MetaLabelContainer"]
layout_mode = 2
auto_translate = false

[node name="Buttons" type="VBoxContainer" parent="Splitter/DocumentContainer/Document/RenderedView"]
layout_mode = 2
mouse_filter = 2

[node name="EditPageButton" type="Button" parent="Splitter/DocumentContainer/Document/RenderedView/Buttons"]
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Edit the current page."
text = "Edit Page"
icon = ExtResource("5_vff41")

[node name="EditView" type="PanelContainer" parent="Splitter/DocumentContainer/Document"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="EditContainer" type="HBoxContainer" parent="Splitter/DocumentContainer/Document/EditView"]
layout_mode = 2

[node name="DocumentCodeEdit" type="CodeEdit" parent="Splitter/DocumentContainer/Document/EditView/EditContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
auto_translate = false
placeholder_text = "BBCode"
scroll_smooth = true
caret_blink = true
highlight_current_line = true
draw_tabs = true
gutters_draw_line_numbers = true
delimiter_strings = Array[String]([])
auto_brace_completion_highlight_matching = true
auto_brace_completion_pairs = {
"[": "]"
}
script = ExtResource("6_6krtk")

[node name="Buttons" type="VBoxContainer" parent="Splitter/DocumentContainer/Document/EditView/EditContainer"]
layout_mode = 2

[node name="SaveEditButton" type="Button" parent="Splitter/DocumentContainer/Document/EditView/EditContainer/Buttons"]
layout_mode = 2
tooltip_text = "Save page."
shortcut = SubResource("Shortcut_mjlnd")
text = "Save"
icon = ExtResource("8_njsno")

[node name="CancelEditButton" type="Button" parent="Splitter/DocumentContainer/Document/EditView/EditContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Discard changes."
icon = ExtResource("9_mhjoc")

[node name="HelpEditButton" type="Button" parent="Splitter/DocumentContainer/Document/EditView/EditContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Show help."
icon = ExtResource("10_dtosf")

[node name="HelpOverlay" type="CenterContainer" parent="Splitter/DocumentContainer/Document"]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Splitter/DocumentContainer/Document/HelpOverlay"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nmdn1")

[node name="HelpRichTextLabel" type="RichTextLabel" parent="Splitter/DocumentContainer/Document/HelpOverlay/PanelContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
bbcode_enabled = true
text = "Howdy!

Welcome to your project's wiki!

Pages are written in [url=https://docs.godotengine.org/en/stable/tutorials/ui/bbcode_in_richtextlabel.html#reference]BBCode[/url],
with some additions.

[b]Make links to other pages:[/b]
[code][[/Path/To/Other Page]][/code]
[code][[Sibling Page]][/code]
[code][[>SubPage]][/code]

[b]Links to scenes and scripts will open them directly:[/b]
[code][lb]url[rb]res://my_scene.tscn[lb]/url[rb][/code]

Links to other files will show them in the FileSystem.

[b]Images can be pasted from clipboard![/b]

Try drag-n-dropping things into the document."
fit_content = true

[node name="CloseHelpButton" type="Button" parent="Splitter/DocumentContainer/Document/HelpOverlay/PanelContainer/HelpRichTextLabel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Close"
icon = ExtResource("9_mhjoc")

[node name="CreatePageDialog" type="ConfirmationDialog" parent="." node_paths=PackedStringArray("wiki_tab")]
unique_name_in_owner = true
title = "Create Page"
initial_position = 2
size = Vector2i(300, 177)
script = ExtResource("3_fyxo2")
wiki_tab = NodePath("..")

[node name="Form" type="VBoxContainer" parent="CreatePageDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 292.0
offset_bottom = 128.0

[node name="PathLabel" type="Label" parent="CreatePageDialog/Form"]
layout_mode = 2
auto_translate = false
text = "/"

[node name="PageNameLineEdit" type="LineEdit" parent="CreatePageDialog/Form"]
layout_mode = 2
auto_translate = false
placeholder_text = "Page Name"

[node name="ErrorLabel" type="Label" parent="CreatePageDialog/Form"]
layout_mode = 2
theme_override_colors/font_color = Color(0.980392, 0, 0.207843, 1)
text = "Page Name is required."

[node name="DeletePageDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
title = "Really delete this page?"
initial_position = 2
size = Vector2i(420, 107)
script = ExtResource("4_ifmwh")

[node name="Form" type="VBoxContainer" parent="DeletePageDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 412.0
offset_bottom = 58.0

[node name="PathLabel" type="Label" parent="DeletePageDialog/Form"]
layout_mode = 2
auto_translate = false
text = "/"

[node name="WarningLabel" type="Label" parent="DeletePageDialog/Form"]
layout_mode = 2
text = "All sub-Pages and related assets will also be deleted!"

[node name="ConfirmUnsavedChangesDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
title = "Unsaved Changes!"
initial_position = 2
dialog_text = "You have unsaved changes in the current page.
If you continue, all changes will be LOST.
Continue?"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Splitter/FileTreeContainer/CreatePageButton" to="." method="_on_create_page_button_pressed"]
[connection signal="pressed" from="Splitter/FileTreeContainer/CreateChildPageButton" to="." method="_on_create_child_page_button_pressed"]
[connection signal="delete_requested" from="Splitter/FileTreeContainer/FileTree" to="." method="_on_file_tree_delete_requested"]
[connection signal="item_activated" from="Splitter/FileTreeContainer/FileTree" to="." method="_on_file_tree_item_activated"]
[connection signal="item_edited" from="Splitter/FileTreeContainer/FileTree" to="." method="_on_file_tree_item_edited"]
[connection signal="item_mouse_selected" from="Splitter/FileTreeContainer/FileTree" to="Splitter/FileTreeContainer/FileTree" method="_on_item_mouse_selected"]
[connection signal="item_moved" from="Splitter/FileTreeContainer/FileTree" to="." method="_on_file_tree_item_moved"]
[connection signal="id_pressed" from="Splitter/FileTreeContainer/FileTree/PopupMenu" to="Splitter/FileTreeContainer/FileTree" method="_on_popup_menu_id_pressed"]
[connection signal="text_changed" from="Splitter/DocumentContainer/Search/SearchBar/SearchLineEdit" to="Splitter/DocumentContainer/Search" method="_on_search_line_edit_text_changed"]
[connection signal="text_submitted" from="Splitter/DocumentContainer/Search/SearchBar/SearchLineEdit" to="Splitter/DocumentContainer/Search" method="_on_search_line_edit_text_submitted"]
[connection signal="popup_hide" from="Splitter/DocumentContainer/Search/SearchPopupPanel" to="Splitter/DocumentContainer/Search" method="_on_search_popup_panel_popup_hide"]
[connection signal="item_activated" from="Splitter/DocumentContainer/Search/SearchPopupPanel/ResultsContainer/ResultsTree" to="Splitter/DocumentContainer/Search" method="_on_results_tree_item_activated"]
[connection signal="meta_clicked" from="Splitter/DocumentContainer/Document/RenderedView/DocumentMarginContainer/DocumentRichTextLabel" to="Splitter/DocumentContainer/Document/RenderedView/DocumentMarginContainer/DocumentRichTextLabel" method="_on_meta_clicked"]
[connection signal="meta_hover_ended" from="Splitter/DocumentContainer/Document/RenderedView/DocumentMarginContainer/DocumentRichTextLabel" to="Splitter/DocumentContainer/Document/RenderedView/DocumentMarginContainer/DocumentRichTextLabel" method="_on_meta_hover_ended"]
[connection signal="meta_hover_started" from="Splitter/DocumentContainer/Document/RenderedView/DocumentMarginContainer/DocumentRichTextLabel" to="Splitter/DocumentContainer/Document/RenderedView/DocumentMarginContainer/DocumentRichTextLabel" method="_on_meta_hover_started"]
[connection signal="pressed" from="Splitter/DocumentContainer/Document/RenderedView/Buttons/EditPageButton" to="." method="_on_edit_page_button_pressed"]
[connection signal="text_changed" from="Splitter/DocumentContainer/Document/EditView/EditContainer/DocumentCodeEdit" to="Splitter/DocumentContainer/Document/EditView/EditContainer/DocumentCodeEdit" method="_on_text_changed"]
[connection signal="text_set" from="Splitter/DocumentContainer/Document/EditView/EditContainer/DocumentCodeEdit" to="Splitter/DocumentContainer/Document/EditView/EditContainer/DocumentCodeEdit" method="_on_text_set"]
[connection signal="pressed" from="Splitter/DocumentContainer/Document/EditView/EditContainer/Buttons/SaveEditButton" to="." method="_on_save_edit_button_pressed"]
[connection signal="pressed" from="Splitter/DocumentContainer/Document/EditView/EditContainer/Buttons/CancelEditButton" to="." method="_on_cancel_edit_button_pressed"]
[connection signal="pressed" from="Splitter/DocumentContainer/Document/EditView/EditContainer/Buttons/HelpEditButton" to="." method="_on_help_edit_button_pressed"]
[connection signal="meta_clicked" from="Splitter/DocumentContainer/Document/HelpOverlay/PanelContainer/HelpRichTextLabel" to="." method="_on_help_rich_text_label_meta_clicked"]
[connection signal="pressed" from="Splitter/DocumentContainer/Document/HelpOverlay/PanelContainer/HelpRichTextLabel/CloseHelpButton" to="." method="_on_close_help_button_pressed"]
[connection signal="confirmed" from="CreatePageDialog" to="." method="_on_create_page_dialog_confirmed"]
[connection signal="visibility_changed" from="CreatePageDialog" to="CreatePageDialog" method="_on_visibility_changed"]
[connection signal="text_changed" from="CreatePageDialog/Form/PageNameLineEdit" to="CreatePageDialog" method="_on_page_name_line_edit_text_changed"]
[connection signal="text_submitted" from="CreatePageDialog/Form/PageNameLineEdit" to="CreatePageDialog" method="_on_page_name_line_edit_text_submitted"]
[connection signal="confirmed" from="DeletePageDialog" to="." method="_on_delete_page_dialog_confirmed"]
[connection signal="canceled" from="ConfirmUnsavedChangesDialog" to="." method="_on_confirm_unsaved_changes_dialog_canceled"]
[connection signal="confirmed" from="ConfirmUnsavedChangesDialog" to="." method="_on_confirm_unsaved_changes_dialog_confirmed"]
